<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bomeans.irreader.LearnAndSendActivity">

    <!-- learn button -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo1_step1_info"/>
    <Button
        android:id="@+id/learn_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:text="@string/button_start_learning"/>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:max="15"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/learn_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text=" "/>



    <!-- transmit button -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo1_step2_info"/>
    <Button
        android:id="@+id/transmit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="20dp"
        android:text="@string/button_test_key"/>

    <!-- remember button -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo1_step3_info"
        android:visibility="gone"/>
    <Button
        android:id="@+id/remember_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:text="@string/button_remember"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/key_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>


</LinearLayout>
