<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <!-- demo 1 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/DarkBlue"
        android:text="@string/title_demo1"/>
    <Button
        android:id="@+id/learn_n_test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:text="@string/button_learn_n_test" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/Gray"
        android:text="@string/intro_demo1"/>

    <!-- demo 2 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/DarkBlue"
        android:text="@string/title_demo2"/>
    <Button
        android:id="@+id/learn_n_recognize_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:text="@string/button_learn_n_recognize"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textColor="@color/Gray"
        android:text="@string/intro_demo2"/>

    <!-- test button -->
    <TextView
        android:id="@+id/test_button_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/DarkRed"
        android:text="[Debug] Test built-in data"
        android:visibility="visible"/>
    <Button
        android:id="@+id/test_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Test"
        android:visibility="visible"/>

    <!-- format state -->
    <TextView
        android:id="@+id/text_device_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:textColor="@color/Red"
        android:text=""/>
    <Button
        android:id="@+id/button_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_reload_formats"
        android:visibility="gone"/>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_width="40dp"
        android:layout_height="40dp" />


    <!-- version info -->
    <TextView
        android:id="@+id/version_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:text="Versions" />

</LinearLayout>
