<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bomeans.irreader.LearnAndRecognizeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/demo2_intro"/>

    <Button
        android:id="@+id/start_learning_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:text="@string/button_restart_learning"/>

    <TextView
        android:id="@+id/text_message_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="" />

    <RadioGroup
        android:id="@+id/type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/type_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_type"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/tv_type" />

        <RadioButton
            android:id="@+id/type_ac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/ac_type" />

    </RadioGroup>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--TextView
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" /-->

    </ScrollView>

</LinearLayout>
